--- a/manageApp/templates/admin/contact.html
+++ b/manageApp/templates/admin/contact.html
@@ -1,5 +1,9 @@
 {% extends 'admin/master.html' %}
 
+{% block head %}
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" />
+{% endblock %}
+
 {% block body %}
 <ul class="list-group">
     <li class="list-group-item">
