--- a/manageApp/templates/admin/login.html
+++ b/manageApp/templates/admin/login.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Login</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='vendors/iconfonts/mdi/css/materialdesignicons.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendors/iconfonts/ionicons/dist/css/ionicons.css') }}">
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='vendors/iconfonts/flag-icon-css/css/flag-icon.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendors/css/vendor.bundle.base.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendors/css/vendor.bundle.addons.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
-    <!-- endinject -->
-    <!-- plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/shared/style.css') }}">
-    <!-- endinject -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}"/>
-</head>
+{% block head %}
+    {% include"admin/head.html" %}
+{% endblock %}
 <body>
-    <div class="container-scroller">
+<div class="container-scroller">
     <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center auth auth-bg-1 theme-one">
             <div class="row w-100">
@@ -63,13 +42,6 @@
                                 </div>
                                 <a href="#" class="text-small forgot-password text-black">Forgot Password</a>
                             </div>
-                            <div class="form-group">
-                                <button class="btn btn-block g-login">
-                                    <img class="mr-3"
-                                         src="{{ url_for('static', filename='images/file-icons/icon-google.svg') }}"
-                                         alt="">Log in with Google
-                                </button>
-                            </div>
                             <div class="text-block text-center my-3">
                                 <span class="text-small font-weight-semibold">Not a member ?</span>
                                 <a href="{{ url_for('register') }}" class="text-black text-small">Create new account</a>
@@ -87,10 +59,7 @@
                             <a href="#">Terms</a>
                         </li>
                     </ul>
-                    <p class="footer-text text-center">copyright © 2020 Bootstrapdash. All rights reserved.</p>
-                    <p class="footer-text text-center text-center"><a
-                            href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank"> Free
-                        Bootstrap template </a> from BootstrapDash templates</p>
+                    <p class="footer-text text-center">copyright © 2020 Open University</p>
                 </div>
             </div>
         </div>
@@ -109,4 +78,3 @@
 <!-- endinject -->
 <script src="{{ url_for('static', filename='js/shared/jquery.cookie.js') }}" type="text/javascript"></script>
 </body>
-</html>
