--- a/manageApp/templates/admin/register.html
+++ b/manageApp/templates/admin/register.html
@@ -1,30 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Star Admin Premium Bootstrap Admin Dashboard Template</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='vendors/iconfonts/mdi/css/materialdesignicons.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendors/iconfonts/ionicons/dist/css/ionicons.css') }}">
-    <link rel="stylesheet"
-          href="{{ url_for('static', filename='vendors/iconfonts/flag-icon-css/css/flag-icon.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendors/css/vendor.bundle.base.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendors/css/vendor.bundle.addons.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
-    <!-- endinject -->
-    <!-- plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/shared/style.css') }}">
-    <!-- endinject -->
-    <!-- Layout styles -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/demo_1/style.css') }}">
-    <!-- End Layout styles -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}"/>
-</head>
+{% block head %}
+    {% include"admin/head.html" %}
+{% endblock %}
 <body>
 <div class="container-scroller">
     <div class="container-fluid page-body-wrapper full-page-wrapper">
@@ -76,7 +52,7 @@
                             </div>
                             <div class="text-block text-center my-3">
                                 <span class="text-small font-weight-semibold">Already have and account ?</span>
-                                <a href="login.html" class="text-black text-small">Login</a>
+                                <a href="{{ url_for('login_admin') }}" class="text-black text-small">Login</a>
                             </div>
                         </form>
                     </div>
@@ -98,4 +74,3 @@
 <!-- endinject -->
 <script src="{{ url_for('static', filename='js/shared/jquery.cookie.js') }}" type="text/javascript"></script>
 </body>
-</html>
