--- a/manageApp/templates/admin/login.html
+++ b/manageApp/templates/admin/login.html
@@ -1,5 +1,5 @@
 {% block head %}
-    {% include"admin/head.html" %}
+    {% include"admin/import.html" %}
 {% endblock %}
 <body>
 <div class="container-scroller">
@@ -44,7 +44,7 @@
                             </div>
                             <div class="text-block text-center my-3">
                                 <span class="text-small font-weight-semibold">Not a member ?</span>
-                                <a href="{{ url_for('register') }}" class="text-black text-small">Create new account</a>
+                                <a href="{{ url_for('register_form') }}" class="text-black text-small">Create new account</a>
                             </div>
                         </form>
                     </div>
@@ -67,14 +67,4 @@
     </div>
     <!-- page-body-wrapper ends -->
 </div>
-<!-- container-scroller -->
-<!-- plugins:js -->
-<script src="{{ url_for('static', filename='vendors/js/vendor.bundle.base.js') }}"></script>
-<script src="{{ url_for('static', filename='vendors/js/vendor.bundle.addons.js') }}"></script>
-<!-- endinject -->
-<!-- inject:js -->
-<script src="{{ url_for('static', filename='js/shared/off-canvas.js') }}"></script>
-<script src="{{ url_for('static', filename='js/shared/misc.js') }}"></script>
-<!-- endinject -->
-<script src="{{ url_for('static', filename='js/shared/jquery.cookie.js') }}" type="text/javascript"></script>
 </body>
