--- a/manageApp/templates/admin/register.html
+++ b/manageApp/templates/admin/register.html
@@ -1,7 +1,8 @@
 {% block head %}
-    {% include"admin/head.html" %}
+    {% include"admin/import.html" %}
 {% endblock %}
 <body>
+<script language="javascript" src="{{ url_for('static', filename='js/kiemtra.js') }}"></script>
 <div class="container-scroller">
     <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center auth register-bg-1 theme-one">
@@ -9,10 +10,10 @@
                 <div class="col-lg-4 mx-auto">
                     <h2 class="text-center mb-4">Register</h2>
                     <div class="auto-form-wrapper">
-                        <form action="#">
+                        <form method="post" action="{{ url_for('register') }}" onsubmit="return validate()">
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Username">
+                                    <input type="text" class="form-control" name="name_dk" placeholder="Name" required>
                                     <div class="input-group-append">
                         <span class="input-group-text">
                           <i class="mdi mdi-check-circle-outline"></i>
@@ -22,7 +23,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="password" class="form-control" placeholder="Password">
+                                    <input type="text" class="form-control" name="email_dk" placeholder="Email">
                                     <div class="input-group-append">
                         <span class="input-group-text">
                           <i class="mdi mdi-check-circle-outline"></i>
@@ -32,7 +33,27 @@
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="password" class="form-control" placeholder="Confirm Password">
+                                    <input type="text" class="form-control" name="username_dk" placeholder="Username" required>
+                                    <div class="input-group-append">
+                        <span class="input-group-text">
+                          <i class="mdi mdi-check-circle-outline"></i>
+                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="password" class="form-control" name="password_dk" placeholder="Password" required>
+                                    <div class="input-group-append">
+                        <span class="input-group-text">
+                          <i class="mdi mdi-check-circle-outline"></i>
+                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="password" class="form-control" name="password-repeat" placeholder="Confirm Password" required>
                                     <div class="input-group-append">
                         <span class="input-group-text">
                           <i class="mdi mdi-check-circle-outline"></i>
@@ -48,7 +69,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <button class="btn btn-primary submit-btn btn-block">Register</button>
+                                <button type="submit" class="btn btn-primary submit-btn btn-block">Register</button>
                             </div>
                             <div class="text-block text-center my-3">
                                 <span class="text-small font-weight-semibold">Already have and account ?</span>
@@ -63,14 +84,4 @@
     </div>
     <!-- page-body-wrapper ends -->
 </div>
-<!-- container-scroller -->
-<!-- plugins:js -->
-<script src="{{ url_for('static', filename='vendors/js/vendor.bundle.base.js') }}"></script>
-<script src="{{ url_for('static', filename='vendors/js/vendor.bundle.addons.js') }}"></script>
-<!-- endinject -->
-<!-- inject:js -->
-<script src="{{ url_for('static', filename='js/shared/off-canvas.js') }}"></script>
-<script src="{{ url_for('static', filename='js/shared/misc.js') }}"></script>
-<!-- endinject -->
-<script src="{{ url_for('static', filename='js/shared/jquery.cookie.js') }}" type="text/javascript"></script>
 </body>
