--- a/manageApp/templates/admin/index.html
+++ b/manageApp/templates/admin/index.html
@@ -1,12 +1,8 @@
 {% extends 'admin/master.html' %}
 
-{% block head %}
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" />
-{% endblock %}
-
 {% block body %}
     {% if current_user.is_authenticated %}
-        <h1>CHÀO MỪNG ĐẾN TRANG QUẢN TRỊ!!!</h1>
+        <h1 class="text-center">CHÀO MỪNG ĐẾN TRANG QUẢN TRỊ!!!</h1>
     {% else %}
         {% include 'admin/login.html' %}
     {% endif %}
