--- a/manageApp/templates/admin/register.html
+++ b/manageApp/templates/admin/register.html
@@ -2,7 +2,6 @@
     {% include"admin/import.html" %}
 {% endblock %}
 <body>
-<script language="javascript" src="{{ url_for('static', filename='js/kiemtra.js') }}"></script>
 <div class="container-scroller">
     <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center auth register-bg-1 theme-one">
@@ -10,13 +9,18 @@
                 <div class="col-lg-4 mx-auto">
                     <h2 class="text-center mb-4">Register</h2>
                     <div class="auto-form-wrapper">
-                        <form method="post" action="{{ url_for('register') }}" onsubmit="return validate()">
+                        {% if err_msg %}
+                            <div class="alert alert-warning">
+                                <h4>{{ err_msg }}</h4>
+                            </div>
+                        {% endif %}
+                        <form method="post" action="{{ url_for('register') }}" onsubmit="return validate()" enctype="multipart/form-data">
                             <div class="form-group">
                                 <div class="input-group">
                                     <input type="text" class="form-control" name="name_dk" placeholder="Name" required>
                                     <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-circle-outline"></i>
+                            <i class="mdi mdi-check-circle-outline"></i>
                         </span>
                                     </div>
                                 </div>
@@ -26,40 +30,52 @@
                                     <input type="text" class="form-control" name="email_dk" placeholder="Email">
                                     <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-circle-outline"></i>
+                            <i class="mdi mdi-check-circle-outline"></i>
                         </span>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" name="username_dk" placeholder="Username" required>
+                                    <input type="text" class="form-control" name="username_dk" placeholder="Username"
+                                           required>
                                     <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-circle-outline"></i>
+                            <i class="mdi mdi-check-circle-outline"></i>
                         </span>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="password" class="form-control" name="password_dk" placeholder="Password" required>
+                                    <input type="password" class="form-control" id="password_dk" name="password_dk"
+                                           placeholder="Password" required>
                                     <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-circle-outline"></i>
+                            <i class="mdi mdi-check-circle-outline"></i>
                         </span>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <input type="password" class="form-control" name="password-repeat" placeholder="Confirm Password" required>
+                                    <input type="password" class="form-control" id="password-repeat"
+                                           name="password-repeat" placeholder="Confirm Password" required>
                                     <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="mdi mdi-check-circle-outline"></i>
+                            <i id="check" class="mdi mdi-check-circle-outline"></i>
                         </span>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="custom-file mb-3">
+                                    <input type="file" class="custom-file-input" id="avatar" name="avatar">
+                                    <label class="custom-file-label" for="customFile">Avatar</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <p class="text-center" id="message"></p>
                             </div>
                             <div class="form-group d-flex justify-content-center">
                                 <div class="form-check form-check-flat mt-0">
@@ -84,4 +100,13 @@
     </div>
     <!-- page-body-wrapper ends -->
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+    $('#password_dk, #password-repeat').on('keyup', function () {
+        if ($('#password_dk').val() == $('#password-repeat').val()) {
+            $('#check').removeClass("mdi-check-circle-outline");
+            $('#check').addClass("mdi-check-circle");
+        }
+    });
+</script>
 </body>
