--- a/manageApp/templates/import.html
+++ b/manageApp/templates/import.html
@@ -17,6 +17,10 @@
               href="{{ url_for('static', filename='assets/vendor/font-awesome/css/fontawesome-all.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='assets/vendor/flaticon/font/flaticon.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='assets/vendor/animate.css/animate.css') }}">
+        {#        <link rel="stylesheet" href="assets/vendor/fancybox/jquery.fancybox.css">#}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
+              integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg=="
+              crossorigin="anonymous" />
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
@@ -39,6 +43,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
             integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
             crossorigin="anonymous"></script>
+    {#    <script src="assets/vendor/appear.js"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.appear/0.4.1/jquery.appear.min.js"
+            integrity="sha512-vYYoQJKYzaJQaOaYxaJhhmxikOJ2SEgHwmCNa0EMP0aRr7opdt4HHrorAwnCyPm8bdW/JBApIomo85YaBX81zA=="
+            crossorigin="anonymous"></script>
+    {#    <script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
+            integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
+            crossorigin="anonymous"></script>
+    {#    <script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>#}
+    <script src="{{ url_for('static', filename='assets/vendor/hs-megamenu/src/hs.megamenu.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <script src="{{ url_for('static', filename='assets/vendor/multilevel-sliding-mobile-menu/dist/jquery.zeynep.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js') }}"></script>
@@ -47,15 +61,22 @@
     <script src="{{ url_for('static', filename='assets/js/hs.core.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.unfold.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.malihu-scrollbar.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/components/hs.fancybox.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.header.js') }}"></script>"
     <script src="{{ url_for('static', filename='assets/js/components/hs.slick-carousel.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.show-animation.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.selectpicker.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/components/hs.onscroll-animation.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/components/hs.quantity-counter.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/components/hs.scroll-nav.js') }}"></script>
 
     <script>
         $(document).on('ready', function () {
             // initialization of unfold component
             $.HSCore.components.HSUnfold.init($('[data-unfold-target]'));
+
+            // initialization of select picker
+            $.HSCore.components.HSSelectPicker.init('.js-select');
 
             // initialization of header
             $.HSCore.components.HSHeader.init($('#header'));
@@ -66,8 +87,19 @@
             // initialization of slick carousel
             $.HSCore.components.HSSlickCarousel.init('.js-slick-carousel');
 
+            // initialization of popups
+            $.HSCore.components.HSFancyBox.init('.js-fancybox');
+
+            // initialization of quantity counter
+            $.HSCore.components.HSQantityCounter.init('.js-quantity');
+
             // initialization of show animations
             $.HSCore.components.HSShowAnimation.init('.js-animation-link');
+
+            // initialization of HSScrollNav component
+            $.HSCore.components.HSScrollNav.init($('.js-scroll-nav'), {
+              duration: 700
+            });
 
             // init zeynepjs
             var zeynep = $('.zeynep').zeynep({
