--- a/manageApp/templates/book_detail.html
+++ b/manageApp/templates/book_detail.html
@@ -37,15 +37,18 @@
                                             <div class="js-slick-carousel u-slick"
                                                  data-pagi-classes="text-center u-slick__pagination my-4">
                                                 <div class="js-slide">
-                                                    <img src="{{ url_for('static', filename='assets/img/300x452/img4.jpg') }}" alt="Image Description"
+                                                    <img src="{{ url_for('static', filename='assets/img/300x452/img4.jpg') }}"
+                                                         alt="Image Description"
                                                          class="mx-auto img-fluid">
                                                 </div>
                                                 <div class="js-slide">
-                                                    <img src="{{ url_for('static', filename='assets/img/300x452/img4.jpg') }}" alt="Image Description"
+                                                    <img src="{{ url_for('static', filename='assets/img/300x452/img4.jpg') }}"
+                                                         alt="Image Description"
                                                          class="mx-auto img-fluid">
                                                 </div>
                                                 <div class="js-slide">
-                                                    <img src="{{ url_for('static', filename='assets/img/300x452/img4.jpg') }}" alt="Image Description"
+                                                    <img src="{{ url_for('static', filename='assets/img/300x452/img4.jpg') }}"
+                                                         alt="Image Description"
                                                          class="mx-auto img-fluid">
                                                 </div>
                                             </div>
@@ -600,7 +603,9 @@
                             <div class="mb-5">
                                 <div class="media d-md-flex">
                                     <a class="d-block" href="#">
-                                        <img class="img-fluid" src="{{ url_for('static', filename='assets/img/60x92/img1.jpg') }}" alt="Image-Description">
+                                        <img class="img-fluid"
+                                             src="{{ url_for('static', filename='assets/img/60x92/img1.jpg') }}"
+                                             alt="Image-Description">
                                     </a>
                                     <div class="media-body ml-3 pl-1">
                                         <h6 class="font-size-2 text-lh-md font-weight-normal">
@@ -613,7 +618,9 @@
                             <div class="mb-5">
                                 <div class="media d-md-flex">
                                     <a class="d-block" href="#">
-                                        <img class="img-fluid" src="{{ url_for('static', filename='assets/img/60x92/img2.jpg') }}" alt="Image-Description">
+                                        <img class="img-fluid"
+                                             src="{{ url_for('static', filename='assets/img/60x92/img2.jpg') }}"
+                                             alt="Image-Description">
                                     </a>
                                     <div class="media-body ml-3 pl-1">
                                         <h6 class="font-size-2 text-lh-md font-weight-normal">
@@ -626,7 +633,9 @@
                             <div>
                                 <div class="media d-md-flex">
                                     <a class="d-block" href="#">
-                                        <img class="img-fluid" src="{{ url_for('static', filename='assets/img/60x92/img3.jpg') }}" alt="Image-Description">
+                                        <img class="img-fluid"
+                                             src="{{ url_for('static', filename='assets/img/60x92/img3.jpg') }}"
+                                             alt="Image-Description">
                                     </a>
                                     <div class="media-body ml-3 pl-1">
                                         <h6 class="font-size-2 text-lh-md font-weight-normal">
