--- a/manageApp/templates/import.html
+++ b/manageApp/templates/import.html
@@ -39,24 +39,21 @@
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"
             integrity="sha256-Ap4KLoCf1rXb52q+i3p0k2vjBsmownyBTE1EqlRiMwA=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.5.4/umd/popper.min.js"></script>
+    <script src="{{ url_for('static', filename='assets/vendor/popper.js/dist/umd/popper.min.js') }}"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
             integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
             crossorigin="anonymous"></script>
-    {#    <script src="assets/vendor/appear.js"></script>#}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.appear/0.4.1/jquery.appear.min.js"
             integrity="sha512-vYYoQJKYzaJQaOaYxaJhhmxikOJ2SEgHwmCNa0EMP0aRr7opdt4HHrorAwnCyPm8bdW/JBApIomo85YaBX81zA=="
             crossorigin="anonymous"></script>
-    {#    <script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
             integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
             crossorigin="anonymous"></script>
-    {#    <script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>#}
     <script src="{{ url_for('static', filename='assets/vendor/hs-megamenu/src/hs.megamenu.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <script src="{{ url_for('static', filename='assets/vendor/multilevel-sliding-mobile-menu/dist/jquery.zeynep.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js') }}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
     <script src="{{ url_for('static', filename='assets/js/hs.core.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.unfold.js') }}"></script>
@@ -64,8 +61,8 @@
     <script src="{{ url_for('static', filename='assets/js/components/hs.fancybox.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.header.js') }}"></script>"
     <script src="{{ url_for('static', filename='assets/js/components/hs.slick-carousel.js') }}"></script>
-    <script src="{{ url_for('static', filename='assets/js/components/hs.show-animation.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.selectpicker.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/js/components/hs.show-animation.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.onscroll-animation.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.quantity-counter.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/js/components/hs.scroll-nav.js') }}"></script>
@@ -130,31 +127,6 @@
                     zeynep.open();
                 }
             });
-        });
-    </script>
-    <script>
-        if ($('.ty-compact-list').length > 5) {
-            $('.ty-compact-list:gt(4)').hide();
-            $('.show-more').show();
-        }
-
-        $('.show-more').on('click', function () {
-            //toggle elements with class .ty-compact-list that their index is bigger than 2
-            $('.ty-compact-list:gt(4)').toggle();
-            //change text of show more element just for demonstration purposes to this demo
-            $(this).text() === 'Show more' ? $(this).text('Show less') : $(this).text('Show more');
-        });
-
-        if ($('.ty-compact-list1').length > 5) {
-            $('.ty-compact-list1:gt(4)').hide();
-            $('.show-more1').show();
-        }
-
-        $('.show-more1').on('click', function () {
-            //toggle elements with class .ty-compact-list that their index is bigger than 2
-            $('.ty-compact-list1:gt(4)').toggle();
-            //change text of show more element just for demonstration purposes to this demo
-            $(this).text() === 'Show more' ? $(this).text('Show less') : $(this).text('Show more');
         });
     </script>
 {% endblock %}
